--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GenTranslate</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
 
@@ -34,28 +35,16 @@
 
 </div>
 
+<a href="https://discord.com/users/1084151267527507988"
+   target="_blank"
+   class="discord-link">💬 Discord</a>
+
+<a href="https://forms.gle/kPGR7ZmFweHMUm9G9"
+   target="_blank"
+   class="suggest-link">➕ Suggest Slang</a>
+
+<div class="credit">Made by 0psc8r</div>
+
 <script src="script.js"></script>
-
-<a
-  href="https://discord.com/users/1084151267527507988"
-  target="_blank"
-  class="discord-link"
->
-  💬 Discord
-</a>
-
-<a
-  href="https://forms.gle/kPGR7ZmFweHMUm9G9"
-  target="_blank"
-  class="suggest-link"
->
-  ➕ Suggest Slang
-</a>
-
-<div class="credit">
-  Made by 0psc8r
-</div>
-
 </body>
 </html>
-    
